# MAESTRO

./: .Rhistory  .gitignore  .travis.yml  DESCRIPTION  NAMESPACE  README.md  environment.yaml  setup.py  strap.py
Extra/: FindAllMarkersInSubset.R  VisualizaUmap2.R  scRNA_merge.R
MAESTRO/: MAESTRO  MAESTRO_ParameterValidate.py  MAESTRO_PipeInit.py  Multiome_BarcodeMap.py  Multiome_HTMLReport.py  Multiome_QC.py  integrate_HTMLReport.py  integrate_report.py  lisa_path.py  makeJsonFromFastq.py  sample2json.py  scATAC_10x_BarcodeCorrect.py  scATAC_10x_PeakCount.py  scATAC_BamAddTag.py  scATAC_FragmentCorrect.py  scATAC_FragmentGenerate.py  scATAC_FragmentReshape.py  scATAC_FragmentSplit.py  scATAC_Genescore.py  scATAC_H5Process.py  scATAC_HTMLReport.py  scATAC_HTMLReport_batch.py  scATAC_HTMLReport_multi.py  scATAC_QC.py  scATAC_TFscore.py  scATAC_cellranger_count.py  scATAC_genescore.py  scATAC_giggle.py  scATAC_microfluidic_PeakCount.py  scATAC_microfluidic_count.py  scATAC_microfluidic_qc.py  scATAC_report.py  scATAC_sci_BarcodeExtract.py  (+9 more)
MAESTRO.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pkg/Rabit/src/: Makefile.am  Matrixmap.h  Rabit.h  lin.h  lm.c  main.cpp
refpkg/Rabit/: AUTHORS  ChangeLog  Makefile.am  NEWS  configure.ac
refpkg/Rabit/autom4te.cache/: output.1  output.2  output.3  output.5  traces.0  traces.1  traces.4  traces.5  traces.6
refpkg/Rabit/data/: hg19.background.PWM.RBP  output
refpkg/Rabit/src/: Makefile.in  Matrixmap.cpp  Rabit.cpp  gsl_util.c  gsl_util.h  lin.c  lm.h  util.cpp  util.h
refpkg/Rabit/test/: compare.py  test.sh
(+559 files in other folders)
